--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: ruby
 rvm:
   - 2.5.1
-
+before_install:
+  - gem install bundler
 script:
   - bin/rake db:migrate RAILS_ENV=test
   - bin/rake
